--- a/SteelgoWebApiSolutions/BackEndSAM/Web.config
+++ b/SteelgoWebApiSolutions/BackEndSAM/Web.config
@@ -30,22 +30,10 @@
     <add key="ActivarFolioConfiguracionOrdenRecepcion" value="1" /><!--0-Inactivo 1-activo-->
   </appSettings>
   <connectionStrings>
-<<<<<<< HEAD
-    <add name="SamLogging" connectionString="metadata=res://*/SamLogging.ModelSamLogging.csdl|res://*/SamLogging.ModelSamLogging.ssdl|res://*/SamLogging.ModelSamLogging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DF-APP-SQL-03\MSSQLSERVER2012;initial catalog=steelgo-samlogging;user id=DeFiAdmin;password=Chelsea102!;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SamContext" connectionString="metadata=res://*/Sam3.ModelSam3.csdl|res://*/Sam3.ModelSam3.ssdl|res://*/Sam3.ModelSam3.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DF-APP-SQL-03\MSSQLSERVER2012;initial catalog=steelgo-sam3;persist security info=True;user id=DeFiAdmin;password=Chelsea102!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="Sam2Context" connectionString="metadata=res://*/Sam2.ModelSam2.csdl|res://*/Sam2.ModelSam2.ssdl|res://*/Sam2.ModelSam2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MTYSQLDEV-V01\MSSQLSERVER2012;initial catalog=sam;persist security info=True;user id=sam;password=sam123!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    
-    <!--MTY-->
-    <!--<add name="SamContext" connectionString="metadata=res://*/Sam3.ModelSam3.csdl|res://*/Sam3.ModelSam3.ssdl|res://*/Sam3.ModelSam3.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MTYSQLDEV-V01\MSSQLSERVER2012;initial catalog=steelgo-sam3;persist security info=True;user id=sam;password=sam123!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <!--JHT-->
-    <!--<add name="SamContext" connectionString="metadata=res://*/Sam3.ModelSam3.csdl|res://*/Sam3.ModelSam3.ssdl|res://*/Sam3.ModelSam3.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JULIANHERNANDEZ;initial catalog=steelgo-sam3;persist security info=True;user id=sam;password=sam123!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  
-=======
     <add name="SamLogging" connectionString="metadata=res://*/SamLogging.ModelSamLogging.csdl|res://*/SamLogging.ModelSamLogging.ssdl|res://*/SamLogging.ModelSamLogging.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Maftec_05\SQLEXPRESS;initial catalog=steelgo-samlogging;user id=SA;password=maftec05;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="SamContext" connectionString="metadata=res://*/Sam3.ModelSam3.csdl|res://*/Sam3.ModelSam3.ssdl|res://*/Sam3.ModelSam3.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Maftec_05\SQLEXPRESS;initial catalog=steelgo-sam3;persist security info=True;user id=SA;password=maftec05;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Sam2Context" connectionString="metadata=res://*/Sam2.ModelSam2.csdl|res://*/Sam2.ModelSam2.ssdl|res://*/Sam2.ModelSam2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Maftec_05\SQLEXPRESS;initial catalog=SAM;persist security info=True;user id=SA;password=maftec05;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="SqlServer" connectionString="server=Maftec_05\SQLEXPRESS;initial catalog=steelgo-sam3;User=sa;Password=maftec05;MultipleActiveResultSets=True;Connect Timeout=2000" />
->>>>>>> Steelgo-InHouse
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -93,17 +81,12 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="ReportExecutionServiceSoap" 
-                 maxReceivedMessageSize="20000000"
-                 maxBufferSize="20000000" 
-                 maxBufferPoolSize="20000000">
+        <binding name="ReportExecutionServiceSoap" maxReceivedMessageSize="20000000" maxBufferSize="20000000" maxBufferPoolSize="20000000">
           <security mode="TransportCredentialOnly">
-            <transport clientCredentialType="Ntlm" proxyCredentialType="None" realm=""/>
+            <transport clientCredentialType="Ntlm" proxyCredentialType="None" realm="" />
             <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
-          <readerQuotas maxDepth="32"
-                 maxArrayLength="200000000"
-                 maxStringContentLength="200000000"/>
+          <readerQuotas maxDepth="32" maxArrayLength="200000000" maxStringContentLength="200000000" />
         </binding>
       </basicHttpBinding>
     </bindings>
