Correccion en campos predeterminados, y sobre el boton VER de Encintado y Etiquetado

--- a/SteelgoWebAppSolutions/FrontEndSAM/FrontEndSAM.csproj
+++ b/SteelgoWebAppSolutions/FrontEndSAM/FrontEndSAM.csproj
@@ -473,6 +473,21 @@
     <Content Include="Scripts\AppComponents\Embarque\Cargas\Web.config" />
     <Content Include="Scripts\AppComponents\Embarque\Consulta\Web.config" />
     <Content Include="Scripts\AppComponents\Embarque\Embarque\Web.config" />
+    <Content Include="Scripts\AppComponents\Embarque\Empaquetado\Ajax.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Empaquetado\Captura.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Empaquetado\Handlers.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Empaquetado\Render.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Empaquetado\Seguridad.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Encintado\Ajax.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Encintado\Captura.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Encintado\Handlers.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Encintado\Render.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Encintado\Seguridad.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Etiquetado\Ajax.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Etiquetado\Captura.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Etiquetado\Handlers.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Etiquetado\Render.js" />
+    <Content Include="Scripts\AppComponents\Embarque\Etiquetado\Seguridad.js" />
     <Content Include="Scripts\AppComponents\Embarque\ListadoEmbarque\Web.config" />
     <Content Include="Scripts\AppComponents\Embarque\Marcado\Web.config" />
     <Content Include="Scripts\AppComponents\Embarque\RevisionEmbarque\Web.config" />
